# ps_to_bq

./: .gitignore  README.rst  break.py  main.py  playground.py  pyproject.toml  requirements.txt  schema.json  schema_break.json
tests/: test_python_de.py
