[tool.poetry]
name = "python_de"
version = "0.1.0"
description = ""
authors = ["Yogic <yogicrhama@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
google-cloud = "^0.34.0"
google = "^3.0.0"
google-cloud-vision = "^2.7.2"
google-cloud-bigquery = "^3.1.0"
pytz = "^2022.1"
Faker = "^13.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
run = "main:main"
break = "break:main"
play = "playground:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
